--- a/PoketBuddy/app/src/main/AndroidManifest.xml
+++ b/PoketBuddy/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.raina.poketbuddy">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission
+        android:name="android.permission.CALL_PHONE"
+        tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
@@ -12,7 +15,6 @@
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false"/>
-
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -46,10 +48,12 @@
         </activity>
         <activity android:name=".LoginActivity" />
         <activity android:name=".SignupActivity" />
-        <activity android:name=".FriendsConnect" />
+        <activity android:name=".FriendsConnect"
+            android:exported="true"/>
         <activity android:name=".AddFriend" />
         <activity android:name=".EditFriend" />
-        <activity android:name=".FindFriend" />
+        <activity android:name=".FindFriend"
+            android:exported="true"/>
         <activity android:name=".RemoveFriend" />
         <!--<activity android:name=".DataBaseHelper" />-->
         <!--
@@ -62,7 +66,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyDRgRN-lHDoS9WEkLQj1DUWOU9qgOjzs2A" />
 
         <activity
             android:name=".MapsActivity"
